# test_cmake_init

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/test_cmake_init/: test_cmake_init.hpp
source/: test_cmake_init.cpp
test/: CMakeLists.txt
test/source/: test_cmake_init_test.cpp
